--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -20,3 +20,4 @@ $small-devices-up: 35.5em; //≥ 568px
 $medium-devices-up: 48em; //≥ 768px
 $large-devices-up: 64em;  //≥ 1024px
 $extra-large-devices-up: 80em;  //≥ 1280px
+$XX-large-devices-up: 93em; //≥ 1488px
