--- a/style/app.css
+++ b/style/app.css
@@ -1705,10 +1705,13 @@ section, footer {
       padding: 2.8em 4em; } }
   @media screen and (min-width: 64em) {
     #pitchmojo .content {
-      padding: 2.8em 8em; } }
+      padding: 2.8em 10%; } }
   @media screen and (min-width: 80em) {
     #pitchmojo .content {
-      padding: 2.8em 16em; } }
+      padding: 2.8em 15%; } }
+  @media screen and (min-width: 93em) {
+    #pitchmojo .content {
+      padding: 2.8em 20%; } }
   #pitchmojo .content p {
     padding: 0.5em 0;
     font-size: 1.1em; }
