--- a/style/_section.scss
+++ b/style/_section.scss
@@ -43,6 +43,9 @@ section, footer {
   @media screen and (min-width: $large-devices-up) {
     height: 35em;
   }
+  @media screen and (min-width: $extra-large-devices-up) {
+    height: 40em;
+  }
 
   h3, h4, p , a {
     color: $body-text-color-light;
