update the twitter handle

--- a/style/_common.scss
+++ b/style/_common.scss
@@ -9,7 +9,7 @@ html, body {
   background-color: $background-color;
 }
 
-// Anchor General Styling
+/* Anchor General Styling*/
 a {
   @extend %anchor;
 }
