--- a/style/app.scss
+++ b/style/app.scss
@@ -13,4 +13,7 @@
 @import "footer";
 
 //case studies
-@import "pitchmojo";
+@import "project-pitchmojo";
+@import "project-bitpool";
+@import "project-landlordportal";
+@import "project-tradieapp";
